@@ -14,7 +14,7 @@ l2 = Fermion(v1, i2).addArrow()
 l1 = Fermion(o1, v2).addArrow()
 l2 = Fermion(v2, o2).addArrow()
 g1 = Graviton(v1, v2).bend(1.5).set3D()
-g2 = SusyBoson(v1, v2).bend(-1.5).set3D()
+g2 = Gaugino(v1, v2).bend(-1.5).set3D()
 g1.setStyles([color.rgb.red])
 
 lab = Label("A silly SUSY / graviton demo", x=0, y=2.2)
